--- a/src/main/resources/templates/fragments/adminBody.html
+++ b/src/main/resources/templates/fragments/adminBody.html
@@ -51,9 +51,9 @@
 <header class="admin-login-header bg" >
     <div class="row">
         <div class="col-11 admin-head">
-            <h1 class="admin-head-title">
+            <h1 class="admin-head-title" style="cursor:pointer" onClick="location.href='/yu/admin/index'">
                 나만 따라 YU
-                <span>관리자 페이지</span>
+                <span style="cursor:pointer" onClick="location.href='/yu/admin/index'">관리자 페이지</span>
             </h1>
         </div>
         <div class="col-1 float-right align-self-center">
