--- a/src/main/resources/templates/fragments/adminBody.html
+++ b/src/main/resources/templates/fragments/adminBody.html
@@ -122,6 +122,8 @@
 <!--<script th:src="@{/scripts/jquery.min.js}"></script> -->
 <script th:src="@{/ckeditor/ckeditor.js}"></script>
 <script th:src="@{/js/bootstrap.js}"></script>
+<!-- custom script -->
+<script th:src="@{/scripts/searchStringFunction.js}"></script>
 
 <th:block layout:fragment="script"></th:block>
 </body>
