--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -34,7 +34,7 @@
 				</div>
 			</li>
 
-			<li class="nav-item"><a class="nav-link" href = "#">통계그래프</a></li>
+			<li class="nav-item"><a class="nav-link" href="/yu/graph/graphView">통계그래프</a></li>
 			<li>
 				<form class="input-group" onsubmit="return false;">
 					<div class="search-option-wrap1 fl" style="margin: 0px auto;">
