--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -585,6 +585,15 @@ pre code {
   margin-left: -15px;
 }
 
+.row1 {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
 .no-gutters {
   margin-right: 0;
   margin-left: 0;
@@ -10401,6 +10410,11 @@ body, html {
   border-right: 4px solid #0D3F7A;
 }
 
+.search-wrap1 {
+  margin: 4rem auto 0;
+  width:1000px;
+}
+
 @media(max-width:992px){
   #menubar{
     display:none;
@@ -10410,6 +10424,12 @@ body, html {
   }
   #grid{
       grid-template-columns:1fr;
+  }
+  .row1{
+    display:block;
+  }
+  .search-wrap1{
+    width:100%;
   }
 }
 
@@ -10848,11 +10868,6 @@ textarea {
 
 .search-wrap {
   margin: 1rem auto 0;
-}
-
-.search-wrap1 {
-  margin: 4rem auto 0;
-  width:1000px;
 }
 
 .search-option-wrap {
