--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -7,7 +7,7 @@
 
 <th:block layout:fragment="article">
   <div class="container-fluid">
-    <div class="row">
+    <div class="row1">
       <div class="col">
         <table class="table table-hover" style="table-layout:fixed">
           <caption class="myArticleTableCaption h5" style="color:#0D3F7A"><b>최근 등록된 매칭</b></caption>
